# projektarbeit

galaxian/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  alien_formation.txt  alien_formation_standard.txt  alien_formation_test.txt  cmake_install.cmake  controller.cpp  controller.h  galaxip.cpp  game_test  game_test.cpp  main.cpp  main_controller.cpp  main_game.cpp  model.cpp  model.h  view.cpp  view.h
galaxian/models/: alien.cpp  alien.h  background.cpp  background.h  backgroundParticle.cpp  backgroundParticle.h  blue_alien.cpp  blue_alien.h  flagship.cpp  flagship.h  galaxip.cpp  galaxip.h  green_alien.cpp  green_alien.h  points.cpp  points.h  projectile.cpp  projectile.h  projectileAlien.cpp  projectileAlien.h  projectileGalaxip.cpp  projectileGalaxip.h  red_alien.cpp  red_alien.h  sounds.cpp  sounds.h
